fixed off centre in mobile offer

--- a/_sass/_offer.scss
+++ b/_sass/_offer.scss
@@ -55,13 +55,14 @@ $big_card_width: 30vw;
   }
 
   &:nth-child(1) {
-    left: -1.75rem;
+    left: 0;
     z-index: 1;
     margin-top: 5rem;
     margin-bottom: 5rem;
     @include media( "screen", ">maxWidth") {
       margin-top:0;
       margin-bottom: 0;
+      left: -1.75rem;
     }
 
     // &.is_selected,
@@ -98,7 +99,7 @@ $big_card_width: 30vw;
   }
 
   &:nth-child(3) {
-    right: -1.75rem;
+    right: 0;
     z-index: 2;
     transform: translateY(-1rem);
     margin-top: 5rem;
@@ -106,6 +107,7 @@ $big_card_width: 30vw;
     @include media( "screen", ">maxWidth") {
       margin-top:0;
       margin-bottom: 0;
+      right: -1.75rem;
     }
 
     &.is_selected,
